Fix prompt button size on mobile

--- a/src/components/prompt.scss
+++ b/src/components/prompt.scss
@@ -113,8 +113,8 @@ body.is-phone {
   .search-input-clear-button {
     position: relative;
     inset-inline-end: 0;
-    width: var(--input-height);
-    height: var(--input-height);
+    width: 48px;
+    height: 48px;
     flex-shrink: 0;
   }
   .search-input-clear-button:after {
